# Seller-Market

./: .gitignore  CACHING_IMPLEMENTATION.md  CLAUDE.md  DYNAMIC_ORDER_CALCULATION.md  FEATURE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  NewFeature.md  QUICKSTART.md  README.md  README_DETAILED.md  REMOTE_CONFIG_README.md  REMOTE_CONFIG_SYSTEM.md  SECURITY.md  SETUP_COMPLETE.md  SETUP_SCRIPTS_README.md  complete_setup.bat  manage.bat  setup.bat  setup_remote_config.bat  setup_remote_config.sh
mgmt_ui/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
mgmt_ui/alembic/: env.py
mgmt_ui/alembic/versions/: 0001_init.py  0002_server_image_pull_policy.py  0003_split_customer_trade_instruction.py  0004_drop_enabled_hard_delete_ti.py  0005_broker_orders.py  0006_agent_fee_configs.py  0007_order_fires.py  0008_brokers.py  0009_broker_orders_tracking_composite.py  0010_customer_fees.py  0011_agent_loss_fee.py  0012_ti_auto_sell_threshold.py  0013_ti_auto_sell_only.py  0014_auto_sell_reload_status.py  0015_bo_dedup_acct_date.py  0016_bo_fee_decline.py  0017_mgmt_instances.py  0018_instrument_close_price.py  0019_close_price_per_customer.py  0020_service_probes.py  0021_customer_cred_status.py  0022_broker_base_domain.py  0023_seed_mofid.py
mgmt_ui/app/: db.py  main.py  settings.py
mgmt_ui/app/models/: __init__.py  audit.py  auto_sell_reload_status.py  broker_orders.py  brokers.py  customers.py  fees.py  health.py  instrument_close_price.py  runs.py  (+10 more)
mgmt_ui/deploy/: RUNBOOK-add-ocr-server.md  RUNBOOK-add-trading-server.md  RUNBOOK-db-failover.md  deploy.sh  docker-compose.prod.yml
mgmt_ui/scripts/: seed_admin.py
mgmt_ui/tests/: conftest.py
(+381 files in other folders)
