[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgmt_ui"
version = "0.1.0"
description = "Management UI for the Seller-Market trading bot fleet"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Seller-Market" },
]
license = { text = "Proprietary" }

dependencies = [
    "fastapi[standard] >=0.115,<0.116",
    "uvicorn[standard] >=0.32,<0.33",
    "sqlalchemy[asyncio] >=2.0,<3.0",
    "asyncpg >=0.30,<0.31",
    "alembic >=1.14,<2.0",
    "pydantic >=2.9,<3.0",
    "pydantic-settings >=2.6,<3.0",
    "jinja2 >=3.1,<4.0",
    "python-multipart >=0.0.12,<0.0.13",
    "passlib[bcrypt] >=1.7,<2.0",
    "bcrypt >=4,<5",
    "python-jose[cryptography] >=3.3,<4.0",
    "cryptography >=43,<44",
    "paramiko >=3.5,<4.0",
    "httpx >=0.27,<0.28",
    "starlette >=0.41,<0.42",
    "python-dotenv >=1,<2",
    "pyyaml >=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest >=8,<9",
    "pytest-asyncio >=0.24,<0.25",
    "ruff >=0.7,<0.8",
    "mypy >=1.13,<2.0",
]

# Flat layout: only the `app` package is shipped.
# `alembic/`, `scripts/`, and `tests/` are runtime artefacts, not importable packages.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
